--- a/appversions.json
+++ b/appversions.json
@@ -1,8 +1,8 @@
 ﻿{
-    "applications": {
-        "application": {
+    "applications": [
+        {
             "name": "com.engineersons.kanpurmetro",
             "version": "3.0.0"
         }
-    }
+    ]
 }
